--- a/graph/css.css
+++ b/graph/css.css
@@ -1,7 +1,3 @@
-body{
-    overflow: hidden;
-}
-
 .nav {
     margin: 10px 0px !important;
     /*padding-left: 75px;*/
@@ -92,7 +88,7 @@ body{
     background-color: #cc3333;
 }
 
-#curve_chart{
+.chart{
     width: 100%;
-    height: 25%;
+    height: 50%;
 }
